# Mandelbrot-Set-CUDA

./: CMakeLists.txt  Mandelbrot-Set.sln  README.md  main.cu
Mandelbrot-Set/: CMakeLists.txt  Mandelbrot-Set.vcxproj  complex_plane.cpp  complex_plane.h  kernel.cu  kernel_api.h  main.cpp  mandelbrot_params.h
